# ex1matam

./: CMakeLists.txt  MtmProductData.c  MtmProductData.h  Orders.c  Orders.h  amount_set.h  amount_set_str.c  amount_set_str_main.c  amount_set_str_tests.c  amount_set_str_tests.h  avivtest.c  avivtest.h  avivtestutilities.h  inventory.c  inventory.h  mainfunc.c  matamikya.c  matamikya.h  matamikye2.c  test_utilities.h
